--- a/src/app/components/dice/dice.component.scss
+++ b/src/app/components/dice/dice.component.scss
@@ -24,6 +24,9 @@
   color: white;
   text-align: center;
   line-height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .cube__face--front  { background: hsla(  0, 100%, 50%, 0.7); }
