style(all): cube

--- a/src/app/components/dice/dice.component.scss
+++ b/src/app/components/dice/dice.component.scss
@@ -27,6 +27,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: 'Roboto', sans-serif;
 }
 
 .cube__face--front  { background: hsla(  0, 100%, 50%, 0.7); }
