--- a/src/app/components/dice/dice.component.scss
+++ b/src/app/components/dice/dice.component.scss
@@ -49,4 +49,9 @@ button {
   padding: 10px 20px;
   font-size: 18px;
   cursor: pointer;
+
+  &:focus {
+    outline: none;
+    box-shadow: none;
+  }
 }
